# leafhill_io_persistent_memory

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN-claude-memory.md  README.md  leafhill.config.md
docs/plans/: 2026-02-22-automatic-conversation-logging-design.md  2026-02-22-automatic-conversation-logging-plan.md  2026-02-23-persistent-project-management-design.md  2026-02-23-persistent-project-management-plan.md  2026-02-24-backup-export-archive-design.md  2026-02-25-precompact-transcript-storage-design.md  2026-02-26-v1.5-hardening-design.md
src/: archive.rs  backup.rs  cli.rs  db.rs  hook.rs  main.rs  mcp.rs  rdbms_export.rs
tests/: archive_tests.rs  cli_tests.rs  mcp_tests.rs
